--- a/seller/src/index.css
+++ b/seller/src/index.css
@@ -21,7 +21,9 @@ code {
 }
 
 body {
-	background: linear-gradient(90deg, #C7C5F4, #776BCC);		
+  background-image: url("../assets/hulk.jpg");	
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .container {
@@ -32,11 +34,11 @@ body {
 }
 
 .screen {		
-	background: linear-gradient(90deg, #5D54A4, #7C78B8);		
+	background-color: none;
 	position: relative;	
 	height: 600px;
 	width: 360px;	
-	box-shadow: 0px 0px 24px #5C5696;
+	box-shadow: 0px 0px 24px #7c2206;
 }
 
 .screen__content {
@@ -61,60 +63,28 @@ body {
 	position: absolute;
 }
 
-.screen__background__shape1 {
-	height: 520px;
-	width: 520px;
-	background: #FFF;	
-	top: -50px;
-	right: 120px;	
-	border-radius: 0 72px 0 0;
-}
-
-.screen__background__shape2 {
-	height: 220px;
-	width: 220px;
-	background: #6C63AC;	
-	top: -172px;
-	right: 0;	
-	border-radius: 32px;
-}
-
-.screen__background__shape3 {
-	height: 540px;
-	width: 190px;
-	background: linear-gradient(270deg, #5D54A4, #6A679E);
-	top: -24px;
-	right: 0;	
-	border-radius: 32px;
-}
-
-.screen__background__shape4 {
-	height: 400px;
-	width: 200px;
-	background: #7E7BB9;	
-	top: 420px;
-	right: 50px;	
-	border-radius: 60px;
-}
-
 .login {
 	width: 320px;
 	padding: 30px;
-	padding-top: 156px;
+	margin-top: 100px;
+  height: 100px;
 }
 
 .login__field {
 	padding: 20px 0px;	
-	position: relative;	
+	position: relative;
+  color: white;	
 }
 
 .login__icon {
 	position: absolute;
 	top: 30px;
-	color: #7875B5;
+	color: white
+
 }
 
 .login__input {
+  color: white;
 	border: none;
 	border-bottom: 2px solid #D1D1D4;
 	background: none;
@@ -133,7 +103,9 @@ body {
 }
 
 .login__submit {
-	background: #fff;
+  display: flex;
+  margin-left: 30%;
+	background: none;
 	font-size: 14px;
 	margin-top: 30px;
 	padding: 16px 20px;
@@ -143,9 +115,9 @@ body {
 	font-weight: 700;
 	display: flex;
 	align-items: center;
-	width: 100%;
-	color: #4C489D;
-	box-shadow: 0px 2px 2px #5C5696;
+	width: 50%;
+	color: white;
+	box-shadow: 0px 2px 2px #7c2206;
 	cursor: pointer;
 	transition: .2s;
 }
